mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_invalid_identifier.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Invalid integer literal: 123abc
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_invalid_identifier.mux:2:6
   |
 2 | auto 123abc = 5
   |      ^^^^^^
